FE commit 2 - improved landing page

--- a/jadore/src/style.css
+++ b/jadore/src/style.css
@@ -1,11 +1,11 @@
 /*
 COLORS:
-background-colors: #7c1d1d #002242
-font-colors: #fff
+background-colors: #7c1d1d #7e0202 #660000 #002242 #680723 #4c041f;;
+font-colors: #fff #ffd8a8
 
 FONT-SIZE:
 span: 3rem
-a: 2.4rem
+a: 2.2rem
 ion-icon: 4rem
 
 
@@ -23,6 +23,7 @@ html {
 
 body {
   overflow-x: hidden;
+  background-color: #ffd8a8;
 }
 
 .disabled {
@@ -32,9 +33,9 @@ body {
 a,
 a:link,
 a:visited {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   text-decoration: none;
-  text-transform: uppercase;
+
   color: #000;
 }
 
@@ -51,6 +52,10 @@ span {
   font-size: 3rem;
 }
 
+strong {
+  font-size: 2.4rem;
+}
+
 ion-icon {
   font-size: 4rem;
 }
@@ -60,17 +65,18 @@ select {
   appearance: none;
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
+  border: 1px solid #ffd8a8 !important;
 }
 
 /* navigation */
 .navigation {
-  padding: 2rem 10rem;
-
+  padding: 0.5rem 10rem;
+  font-family: "Playfair Display", serif;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-  background-color: #7c1d1d;
+  background-color: #4c041f;
 }
 .nav-top {
   display: flex;
@@ -80,7 +86,7 @@ select {
 .nav-contact {
   display: flex;
   align-items: center;
-  color: #fff;
+  color: #ffd8a8;
   gap: 5rem;
 }
 .nav-contact div {
@@ -92,10 +98,10 @@ select {
   font-size: 2rem !important;
 }
 .nav-top select {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  color: #fff;
-  background-color: #7c1d1d;
+  color: #ffd8a8;
+  background-color: #4c041f;
   border: none;
   font-size: 2.5rem;
   outline: none;
@@ -115,15 +121,23 @@ select {
   gap: 1rem;
 }
 .nav-logo span {
-  color: #fff;
+  color: #ffd8a8;
+  text-transform: capitalize;
 }
 
 .search-prompt {
   width: 100%;
-  padding: 1.5rem 0rem 1.5rem 1.5rem;
+  padding: 1rem 0rem 1rem 1.5rem;
   font-size: 2rem;
   border-radius: 5rem;
+  outline: none;
+  border: none;
+  color: #4c041f;
 }
+.search-prompt::placeholder {
+  color: #4c041f;
+}
+
 .prompt-container {
   display: flex;
   position: relative;
@@ -131,12 +145,12 @@ select {
 .prompt-magnifier {
   position: absolute;
   right: 1rem;
-  top: 1rem;
+  top: 0.7rem;
   font-size: 3.5rem;
   color: #000 !important;
 }
 .nav-mid ion-icon {
-  color: #fff;
+  color: #ffd8a8;
 }
 .nav-cart {
   display: flex;
@@ -151,5 +165,144 @@ select {
   justify-content: space-evenly;
 }
 .nav-bottom a {
-  color: #fff;
+  color: #ffd8a8;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  transition: all ease-in 0.2s;
+  text-transform: capitalize;
+}
+.nav-bottom a:hover {
+  color: #4c041f;
+  background-color: #ffd8a8;
+}
+
+/* MAIN */
+
+/* SECTION 1 */
+.section-one {
+  max-width: 120rem;
+  margin: 5rem auto;
+  font-family: "Playfair Display", serif;
+}
+.carousel-image {
+  width: 100%;
+  height: 60rem;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+}
+
+/* .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='15 18 9 12 15 6' /%3E%3C/svg%3E");
+  width: 4vw;
+  height: 4vh;
+}
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='9 18 15 12 9 6' /%3E%3C/svg%3E");
+  width: 4vw;
+  height: 4vh;
+} */
+.carousel-item div {
+  position: absolute;
+  bottom: 4rem;
+  right: 2rem;
+  font-size: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  color: #ffd8a8;
+}
+.carousel-item strong {
+  font-size: 3rem;
+  font-weight: 400;
+}
+.carousel-item a {
+  padding: 1rem;
+  border: 3px solid #ffd8a8;
+  border-radius: 10px;
+  font-weight: 400;
+  color: #ffd8a8 !important;
+}
+
+/* SECTION 2 */
+.section-two {
+  max-width: 120rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+  font-family: "Playfair Display", serif;
+}
+.section-two--grid-item {
+  position: relative;
+}
+.section-two div img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+}
+.section-two--grid-item p {
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+
+  font-size: 3rem;
+  font-weight: 700;
+  color: #ffd8a8;
+  text-transform: capitalize;
+}
+
+/* FOOTER */
+footer {
+  background-color: #4c041f;
+  color: #ffd8a8;
+  font-family: "Playfair Display", serif;
+}
+.footer-info {
+  max-width: 120rem;
+  margin: 0 auto;
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 2rem 0rem;
+  gap: 2rem;
+}
+
+.footer-info div span {
+  vertical-align: middle;
+  font-size: 2.4rem;
+}
+.footer-info div ion-icon {
+  vertical-align: middle;
+}
+.footer-info--mid {
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+}
+.news-letter {
+  width: 80%;
+  padding: 1rem;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  font-size: 2rem;
+}
+.news-letter::placeholder {
+  color: #4c041f;
+}
+.subscribe {
+  padding: 1rem 1rem;
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  font-family: "Playfair Display", serif;
+  margin-top: 1.5rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #ffd8a8;
+  color: #4c041f;
 }
