--- a/jadore/src/style.css
+++ b/jadore/src/style.css
@@ -1,6 +1,6 @@
 /*
 COLORS:
-background-colors: #7c1d1d #7e0202 #660000 #002242 #680723 #4c041f;;
+background-colors: #7c1d1d #7e0202 #220000 #002242 #680723 #4c041f #fff4e6
 font-colors: #fff #ffd8a8
 
 FONT-SIZE:
@@ -14,16 +14,19 @@ ion-icon: 4rem
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  font-family: "montserrat";
 }
 
 html {
   font-size: 62.5%;
-  font-family: "Playfair Display", serif;
+  font-family: "roboto", serif;
 }
 
 body {
-  overflow-x: hidden;
-  background-color: #ffd8a8;
+  /* overflow-x: hidden; */
+  /* background-color: #dee2e6; */
+  background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f);
 }
 
 .disabled {
@@ -33,276 +36,232 @@ body {
 a,
 a:link,
 a:visited {
-  font-size: 2.2rem;
+  font-size: 1.5rem;
   text-decoration: none;
 
   color: #000;
 }
 
 p {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 select {
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 0.5rem;
 }
 
 span {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 strong {
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 
 ion-icon {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
-/* removes arrow down icon from select element */
+/* HEADER */
+
+nav {
+  width: 100%;
+  background-color: transparent;
+  color: #fff !important;
+  padding: 0rem 2rem;
+}
+.upper-nav {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  gap: 1rem;
+}
+.logo {
+  margin-top: 1rem;
+}
+
+.upper-nav form {
+  position: relative;
+  display: flex;
+}
+.upper-nav form input[type="submit"] {
+  width: 6rem;
+  cursor: pointer;
+  background-color: transparent;
+  position: absolute;
+  right: 0;
+}
+
+.browse-holder {
+  position: relative;
+  margin-top: 1rem;
+}
+
+.magnifier {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  cursor: pointer;
+  color: #ffd8a8;
+}
+
+.upper-nav form input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.5rem;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #91171f;
+}
+.upper-nav form input::placeholder {
+  color: #91171f !important;
+}
+
+.log-in {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+.log-in a {
+  color: #fff !important;
+  font-size: 1.5rem;
+  font-weight: 500;
+
+  cursor: pointer;
+}
+.log-in div {
+  border-right: 1px solid white;
+}
+.nav-cart {
+  margin-top: 1rem;
+  justify-self: end;
+  color: #fff !important;
+
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  cursor: pointer;
+}
 select {
   appearance: none;
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
-  border: 1px solid #ffd8a8 !important;
-}
-
-/* navigation */
-.navigation {
-  padding: 0.5rem 10rem;
-  font-family: "Playfair Display", serif;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  background-color: #4c041f;
-}
-.nav-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-contact {
-  display: flex;
-  align-items: center;
-  color: #ffd8a8;
-  gap: 5rem;
-}
-.nav-contact div {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.nav-contact div span {
-  font-size: 2rem !important;
-}
-.nav-top select {
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  color: #ffd8a8;
-  background-color: #4c041f;
-  border: none;
-  font-size: 2.5rem;
   outline: none;
-}
-
-/*  */
-.nav-mid {
-  display: grid;
-  grid-template-columns: 15rem 1fr 10rem;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.nav-logo {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.nav-logo span {
-  color: #ffd8a8;
-  text-transform: capitalize;
-}
-
-.search-prompt {
-  width: 100%;
-  padding: 1rem 0rem 1rem 1.5rem;
+  border: none;
+  background-color: transparent;
   font-size: 2rem;
-  border-radius: 5rem;
-  outline: none;
-  border: none;
-  color: #4c041f;
-}
-.search-prompt::placeholder {
-  color: #4c041f;
+  color: #fff;
+  cursor: pointer;
 }
 
-.prompt-container {
-  display: flex;
-  position: relative;
-}
-.prompt-magnifier {
-  position: absolute;
-  right: 1rem;
-  top: 0.7rem;
-  font-size: 3.5rem;
-  color: #000 !important;
-}
-.nav-mid ion-icon {
-  color: #ffd8a8;
-}
-.nav-cart {
-  display: flex;
-  justify-content: center;
+.bottom-nav {
+  max-width: 130rem;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
-
-/*  */
-.nav-bottom {
-  display: flex;
-  justify-content: space-evenly;
+.bottom-nav a {
+  padding: 0.5rem 0rem;
+  color: #fff;
+  font-size: 1.6rem;
+  transition: all 0.2s;
+  border-radius: 5px;
 }
-.nav-bottom a {
-  color: #ffd8a8;
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
-  transition: all ease-in 0.2s;
-  text-transform: capitalize;
-}
-.nav-bottom a:hover {
-  color: #4c041f;
-  background-color: #ffd8a8;
+.bottom-nav a:hover {
+  background-color: white;
+  color: #91171f;
 }
 
 /* MAIN */
+main {
+  width: 100%;
+}
 
-/* SECTION 1 */
+/* carousel */
 .section-one {
-  max-width: 120rem;
+  width: 100%;
+  max-width: 130rem;
+
   margin: 5rem auto;
-  font-family: "Playfair Display", serif;
+  border: 10px solid white;
+  border-radius: 2px;
 }
-.carousel-image {
-  width: 100%;
-  height: 60rem;
-  aspect-ratio: 16/9;
-  object-fit: cover;
+.carousel-inner {
+  width: inherit;
+}
+.carousel-inner img {
+  width: 100% !important;
+  aspect-ratio: 16/9 !important;
+}
+.carousel-cta {
+  position: absolute;
+  bottom: 5rem;
+  left: 5rem;
+  color: #fff;
 }
 
-/* .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='15 18 9 12 15 6' /%3E%3C/svg%3E");
-  width: 4vw;
-  height: 4vh;
+.carousel-cta h2 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
 }
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='9 18 15 12 9 6' /%3E%3C/svg%3E");
-  width: 4vw;
-  height: 4vh;
-} */
-.carousel-item div {
-  position: absolute;
-  bottom: 4rem;
-  right: 2rem;
+
+.carousel-cta a {
+  color: #fff;
+  border: 2px solid #fff;
+  padding: 0.5rem 1rem;
   font-size: 2rem;
+  font-weight: 500;
+}
+/* grid */
+.grid-holder {
+  max-width: 130rem;
+  margin: 5rem auto;
 
   display: flex;
   flex-direction: column;
+
+  border: 10px solid white;
+}
+.grid-inner {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
   align-items: center;
-  gap: 1rem;
-
-  color: #ffd8a8;
 }
-.carousel-item strong {
-  font-size: 3rem;
-  font-weight: 400;
+.grid-inner div p {
+  padding: 2rem;
 }
-.carousel-item a {
-  padding: 1rem;
-  border: 3px solid #ffd8a8;
-  border-radius: 10px;
-  font-weight: 400;
-  color: #ffd8a8 !important;
-}
-
-/* SECTION 2 */
-.section-two {
-  max-width: 120rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 1rem;
-  font-family: "Playfair Display", serif;
-}
-.section-two--grid-item {
-  position: relative;
-}
-.section-two div img {
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 16/9;
+img {
   object-fit: cover;
-}
-.section-two--grid-item p {
-  position: absolute;
-  bottom: 0;
-  right: 1rem;
-
-  font-size: 3rem;
-  font-weight: 700;
-  color: #ffd8a8;
-  text-transform: capitalize;
+  width: 100%;
 }
 
-/* FOOTER */
-footer {
-  background-color: #4c041f;
-  color: #ffd8a8;
-  font-family: "Playfair Display", serif;
-}
-.footer-info {
-  max-width: 120rem;
-  margin: 0 auto;
-  margin-top: 5rem;
+/* best seller */
+.best-seller--holder {
+  max-width: 130rem;
+  margin: 5rem auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 2rem 0rem;
-  gap: 2rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+}
+.best-seller--holder div {
+  height: 30rem;
+  background-image: url("../public/images/perfumes/image-1.jpg");
+  background-size: cover;
 }
 
-.footer-info div span {
-  vertical-align: middle;
-  font-size: 2.4rem;
-}
-.footer-info div ion-icon {
-  vertical-align: middle;
-}
-.footer-info--mid {
-  display: flex;
-  flex-direction: column;
-  padding-left: 2rem;
-}
-.news-letter {
-  width: 80%;
-  padding: 1rem;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  font-size: 2rem;
-}
-.news-letter::placeholder {
-  color: #4c041f;
-}
-.subscribe {
-  padding: 1rem 1rem;
-  font-size: 2rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  font-family: "Playfair Display", serif;
-  margin-top: 1.5rem;
-  border-radius: 5px;
-  border: none;
-  background-color: #ffd8a8;
-  color: #4c041f;
+/* footer */
+
+footer {
+  width: 100%;
+  background-color: transparent;
+  height: 100px;
 }
