--- a/jadore/src/styles/style.css
+++ b/jadore/src/styles/style.css
@@ -50,6 +50,9 @@ select {
   font-size: 1.5rem;
   padding: 0.5rem;
 }
+select option {
+  color: #91171f;
+}
 
 span {
   font-size: 2rem;
@@ -180,6 +183,59 @@ select {
   color: #91171f;
 }
 
+/* slider-menu */
+.slider-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 25rem;
+
+  background: linear-gradient(to bottom, #91171f, #ffd8a8);
+  transform: translate(-27rem);
+
+  transition: all 0.5s;
+
+  z-index: 100;
+}
+.slider-menu a {
+  color: #fff;
+  font-size: 1.7rem;
+  padding: 0rem 1rem;
+  font-weight: 600;
+  border-bottom: 1px solid #ffd8a8;
+}
+.slider-menu ion-icon {
+  color: #000;
+  font-size: 3.4rem;
+  cursor: pointer;
+}
+.open-menu {
+  display: none;
+}
+
+.slider-menu div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  color: #fff;
+
+  padding: 1rem 0.5rem;
+}
+.slider-menu div p {
+  font-size: 1.7rem;
+  margin-bottom: 0rem;
+  font-weight: 600;
+}
+.slider-menu div ion-icon {
+  color: #fff;
+}
+
 /* MAIN */
 main {
   width: 100%;
@@ -203,8 +259,8 @@ main {
 }
 .carousel-cta {
   position: absolute;
-  bottom: 5rem;
-  left: 5rem;
+  bottom: 5%;
+  left: 5%;
   color: #fff;
 }
 
@@ -242,6 +298,7 @@ main {
 img {
   object-fit: cover;
   width: 100%;
+  aspect-ratio: 16/9;
 }
 
 /* best seller */
@@ -249,19 +306,83 @@ img {
   max-width: 130rem;
   margin: 5rem auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
 }
-.best-seller--holder div {
-  height: 30rem;
-  background-image: url("../public/images/perfumes/image-1.jpg");
-  background-size: cover;
+.best-seller--inner {
+  display: flex;
+  flex-direction: column;
+}
+.best-seller--info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: #64070d;
+  font-weight: 600;
+}
+.best-seller--info select {
+  border: 2px solid #91171f;
+  text-align: center;
+  color: #91171f;
+}
+.best-seller--info a {
+  text-align: center;
+  border: 1px solid #91171f;
+  padding: 0.5rem;
+  font-weight: 600;
 }
 
 /* footer */
 
 footer {
   width: 100%;
+  max-width: 130rem;
+  margin: 5rem auto;
   background-color: transparent;
-  height: 100px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  align-items: top;
+}
+.footer-info h1 {
+  font-size: 2rem;
+}
+.contact-info div {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin: 1rem 0rem;
+}
+.contact-info div p {
+  margin: 0rem;
+}
+.credits {
+  display: flex;
+  flex-direction: column;
+  justify-self: end;
+}
+.credits p {
+  font-size: 1.6rem;
+}
+footer div form {
+  display: flex;
+  flex-direction: column;
+}
+footer div form div {
+  display: flex;
+  flex-direction: column;
+}
+footer div form label {
+  font-size: 1.6rem;
+}
+footer div form input {
+  font-size: 1.5rem;
+  padding: 1rem 5rem 1rem 1rem;
+}
+footer div form input[type="submit"] {
+  font-size: 1.5rem;
+  padding: 1rem 1rem;
+  width: 100%;
+  max-width: 15rem;
 }
