--- a/jadore/src/styles/query.css
+++ b/jadore/src/styles/query.css
@@ -1,21 +1,19 @@
 @media (max-width: 900px) {
+  nav {
+    background: linear-gradient(to bottom, #e9ecef 60%, #e9ecef 40%);
+  }
+
   .upper-nav {
     grid-template-columns: repeat(3, 1fr);
   }
   .nav-cart {
     grid-column-start: 3;
   }
-  .best-seller--holder {
-    padding: 2rem;
-  }
 }
 
 @media (max-width: 800px) {
   .credits {
     justify-self: start;
-  }
-  .grid-inner div p {
-    font-size: 1.3rem;
   }
 }
 
@@ -26,19 +24,6 @@
   .nav-cart {
     grid-column-start: 2;
   }
-  .grid-inner {
-    grid-template-columns: 1fr;
-  }
-  .row-1 {
-    grid-row: 1;
-  }
-  .grid-inner div {
-    font-size: 2rem;
-    padding: 1rem;
-  }
-  .grid-inner div p {
-    padding: 0rem;
-  }
 }
 @media (max-width: 500px) {
   .upper-nav {
@@ -48,16 +33,21 @@
     grid-column-start: 1;
     justify-self: start;
   }
-  .grid-inner div p {
-    /* font-size: 0.8rem; */
-    padding: 0.3rem;
-  }
-  /* .best-seller--holder {
-    padding: 5rem;
-  } */
 
   .carousel-cta h2,
   .carousel-cta a {
     font-size: 1.5rem;
+  }
+}
+
+/*  */
+@media (min-width: 768px) {
+  .best-seller--inner {
+    display: flex;
+  }
+  .best-seller--inner .carousel-item {
+    margin-right: 0;
+    flex: 0 0 20%;
+    display: block;
   }
 }
