--- a/jadore/src/styles/style.css
+++ b/jadore/src/styles/style.css
@@ -14,7 +14,7 @@ ion-icon: 4rem
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-
+  /* color: #000; */
   font-family: "montserrat";
 }
 
@@ -22,11 +22,12 @@ html {
   font-size: 62.5%;
   font-family: "roboto", serif;
 }
-
 body {
   /* overflow-x: hidden; */
   /* background-color: #dee2e6; */
-  background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f);
+  /* background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f); */
+  /* background: linear-gradient(135deg, #b33939, #992626);
+   */
 }
 
 .disabled {
@@ -51,7 +52,7 @@ select {
   padding: 0.5rem;
 }
 select option {
-  color: #91171f;
+  color: #000;
 }
 
 span {
@@ -70,8 +71,10 @@ ion-icon {
 
 nav {
   width: 100%;
-  background-color: transparent;
-  color: #fff !important;
+  /* background-color: #ab8e66; */
+  background: linear-gradient(to bottom, #e9ecef 60%, #ab8e66 40%);
+  /* background-color: #adb5bd; */
+  color: #000;
   padding: 0rem 2rem;
 }
 .upper-nav {
@@ -81,6 +84,9 @@ nav {
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
   gap: 1rem;
+  padding: 0rem 0rem 2rem 0rem;
+
+  font-weight: 600 !important;
 }
 .logo {
   margin-top: 1rem;
@@ -108,7 +114,7 @@ nav {
   top: 1.5rem;
   right: 1.5rem;
   cursor: pointer;
-  color: #ffd8a8;
+  color: #000;
 }
 
 .upper-nav form input {
@@ -118,36 +124,36 @@ nav {
   border: none;
   outline: none;
   border-radius: 5px;
-  color: #91171f;
+  color: #000;
+  font-weight: 500;
 }
 .upper-nav form input::placeholder {
-  color: #91171f !important;
+  color: #000;
 }
 
 .log-in {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   display: flex;
   gap: 1rem;
 }
 .log-in a {
-  color: #fff !important;
+  color: #000;
   font-size: 1.5rem;
-  font-weight: 500;
 
+  font-weight: 600 !important;
   cursor: pointer;
 }
 .log-in div {
   border-right: 1px solid white;
 }
 .nav-cart {
-  margin-top: 1rem;
   justify-self: end;
-  color: #fff !important;
+  color: #000;
 
   display: flex;
   align-items: center;
   gap: 1rem;
-
+  font-weight: 600 !important;
   cursor: pointer;
 }
 select {
@@ -158,29 +164,32 @@ select {
   border: none;
   background-color: transparent;
   font-size: 2rem;
-  color: #fff;
+  color: #000;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .bottom-nav {
   max-width: 130rem;
-  margin: 2rem auto;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   text-align: center;
   align-items: center;
   gap: 1rem;
+  font-weight: 600 !important;
+  padding: 1rem 0rem;
 }
 .bottom-nav a {
   padding: 0.5rem 0rem;
-  color: #fff;
+  color: #000;
   font-size: 1.6rem;
   transition: all 0.2s;
   border-radius: 5px;
 }
 .bottom-nav a:hover {
   background-color: white;
-  color: #91171f;
+  color: #000;
 }
 
 /* slider-menu */
@@ -203,7 +212,7 @@ select {
   z-index: 100;
 }
 .slider-menu a {
-  color: #fff;
+  color: #000;
   font-size: 1.7rem;
   padding: 0rem 1rem;
   font-weight: 600;
@@ -223,7 +232,7 @@ select {
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
-  color: #fff;
+  color: #000;
 
   padding: 1rem 0.5rem;
 }
@@ -233,7 +242,7 @@ select {
   font-weight: 600;
 }
 .slider-menu div ion-icon {
-  color: #fff;
+  color: #000;
 }
 
 /* MAIN */
@@ -246,27 +255,38 @@ main {
   width: 100%;
   max-width: 130rem;
 
-  margin: 5rem auto;
-  border: 10px solid white;
+  margin: 2.5rem auto;
+
   border-radius: 2px;
 }
-.carousel-inner {
+/* .carousel-inner {
   width: inherit;
+} */
+/* .carousel-inner img {
+  width: 100%;
+  height: 45rem;
+  object-fit: 100% 100%;
+} */
+/* test  */
+.img-div {
+  background-image: url("../../public/images/perfumes/image-11.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 40rem;
 }
-.carousel-inner img {
-  width: 100% !important;
-  aspect-ratio: 16/9 !important;
-}
+
 .carousel-cta {
   position: absolute;
   bottom: 5%;
   left: 5%;
-  color: #fff;
+  color: #fff !important;
 }
 
 .carousel-cta h2 {
   margin-bottom: 2rem;
   font-size: 2.5rem;
+  font-weight: 600;
 }
 
 .carousel-cta a {
@@ -274,62 +294,56 @@ main {
   border: 2px solid #fff;
   padding: 0.5rem 1rem;
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 /* grid */
-.grid-holder {
-  max-width: 130rem;
-  margin: 5rem auto;
-
-  display: flex;
-  flex-direction: column;
-
-  border: 10px solid white;
-}
-.grid-inner {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  align-items: center;
-}
-.grid-inner div p {
-  padding: 2rem;
-}
-img {
-  object-fit: cover;
+.grid {
   width: 100%;
-  aspect-ratio: 16/9;
+  max-width: 130rem;
+
+  margin: 3rem auto;
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+.grid div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid-inner {
+  position: relative;
+}
+
+.grid-info {
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
+}
+.grid-info p,
+.grid-info a {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #000;
 }
 
 /* best seller */
-.best-seller--holder {
+.best-seller--section {
+  width: 100%;
   max-width: 130rem;
-  margin: 5rem auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1rem;
+  margin: 0 auto;
+
+  /* overflow-x: hidden; */
 }
-.best-seller--inner {
-  display: flex;
-  flex-direction: column;
-}
-.best-seller--info {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  color: #64070d;
-  font-weight: 600;
-}
-.best-seller--info select {
-  border: 2px solid #91171f;
-  text-align: center;
-  color: #91171f;
-}
-.best-seller--info a {
-  text-align: center;
-  border: 1px solid #91171f;
-  padding: 0.5rem;
-  font-weight: 600;
+
+.best-seller--prev,
+.best-seller--next {
+  width: 6vh;
+  height: 6vh;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* footer */
@@ -368,6 +382,7 @@ footer {
 footer div form {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
 }
 footer div form div {
   display: flex;
