--- a/jadore/src/styles/style.css
+++ b/jadore/src/styles/style.css
@@ -296,6 +296,22 @@ main {
   font-size: 2rem;
   font-weight: 600;
 }
+
+.carousel-control-prev-first,
+.carousel-control-next-first {
+  position: absolute;
+  top: 75%;
+  border: none;
+  background-color: transparent;
+  padding: 4rem;
+}
+.carousel-control-prev-first {
+  right: 15%;
+}
+.carousel-control-next-first {
+  right: 5%;
+}
+
 /* grid */
 .grid {
   width: 100%;
@@ -337,6 +353,13 @@ main {
 
   /* overflow-x: hidden; */
 }
+.best-seller--inner {
+  /* padding: 1em; */
+}
+.card {
+  margin: 0 0.5em;
+  border: none;
+}
 
 .best-seller--prev,
 .best-seller--next {
@@ -347,6 +370,17 @@ main {
   background-color: black !important;
 
   transform: translateY(-50%);
+}
+
+.card .img-wrapper {
+  max-width: 100%;
+  height: 13rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card .img-wrapper img {
+  max-height: 100%;
 }
 
 /* footer */
