--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     />
     <title>Contacts</title>
-    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="stylesheets/contact.css" />
   </head>
   <body>
     <main>
