--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,7 +60,7 @@
           <a href="#">About us</a>
           <a href="#">Delivery</a>
           <a href="#">Blog</a>
-          <a href="contact.html">Contacts</a>
+          <a href="/contact">Contacts</a>
         </div>
       </nav>
 
