navbar update, register form update

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,105 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta
-      name="description"
-      content="Contact us for any inquiries or feedback about our exquisite collection of perfumes. Our team will be glad to assist you with any questions you may have."
+      name='description'
+      content='Contact us for any inquiries or feedback about our exquisite collection of perfumes. Our team will be glad to assist you with any questions you may have.'
     />
     <meta
-      name="keywords"
-      content="perfume, fragrance, contact, inquiry, feedback, customer support, assistance"
+      name='keywords'
+      content='perfume, fragrance, contact, inquiry, feedback, customer support, assistance'
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel='preconnect' href='https://fonts.googleapis.com' />
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
+      href='https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap'
+      rel='stylesheet'
     />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
+      rel='stylesheet'
+      href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css'
+      integrity='sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N'
+      crossorigin='anonymous'
     />
-    <title>Contacts</title>
-    <link rel="stylesheet" href="stylesheets/contact.css" />
+    {{! <title>Contacts</title> }}
+    {{!-- <link rel='stylesheet' href='stylesheets/contact.css' /> --}}
+    <link rel="stylesheet" href="stylesheets/nav.css">
+     <link rel="stylesheet" href="stylesheets/general.css">
   </head>
   <body>
+     {{> nav}}
     <main>
       <h1>Contact us:</h1>
-      <div class="cta">
-        <div class="contact-info">
+      <div class='cta'>
+        <div class='contact-info'>
           <div>
-            <ion-icon name="call-outline"></ion-icon>
+            <ion-icon name='call-outline'></ion-icon>
             <p>061987643</p>
           </div>
           <div>
-            <ion-icon name="mail-outline"></ion-icon>
+            <ion-icon name='mail-outline'></ion-icon>
             <p>jador@gmail.com</p>
           </div>
-          <ion-icon name="time-outline"></ion-icon>
+          <ion-icon name='time-outline'></ion-icon>
           <div>Open Monday to Friday (08-18)h</div>
         </div>
 
         <div>
-          <form action="">
+          <form action=''>
             <div>
               <div>
-                <label for="name"></label>
+                <label for='name'></label>
                 <input
-                  type="text"
-                  name="name"
-                  class="name"
+                  type='text'
+                  name='name'
+                  class='name'
                   required
-                  placeholder="Your name"
+                  placeholder='Your name'
                 />
               </div>
               <div>
-                <label for="email"></label>
+                <label for='email'></label>
                 <input
-                  type="email"
-                  name="email"
-                  class="email"
+                  type='email'
+                  name='email'
+                  class='email'
                   required
-                  placeholder="Your email"
+                  placeholder='Your email'
                 />
               </div>
               <div>
-                <label for="message"></label>
+                <label for='message'></label>
                 <textarea
-                  name="message"
-                  id=""
-                  rows="10"
-                  placeholder="Your inquiry"
-                  class="message"
+                  name='message'
+                  id=''
+                  rows='10'
+                  placeholder='Your inquiry'
+                  class='message'
                 ></textarea>
               </div>
             </div>
-            <label for="submit"></label>
-            <input type="submit" name="submit" value="send" class="submit" />
+            <label for='submit'></label>
+            <input type='submit' name='submit' value='send' class='submit' />
           </form>
         </div>
       </div>
     </main>
     <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+      type='module'
+      src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js'
     ></script>
     <script
       nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+      src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js'
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
+      src='https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js'
+      integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj'
+      crossorigin='anonymous'
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
+      src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js'
+      integrity='sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct'
+      crossorigin='anonymous'
     ></script>
   </body>
 </html>
