--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,249 +1,5 @@
-/*
-COLORS:
-background-colors: #7c1d1d #7e0202 #220000 #002242 #680723 #4c041f #fff4e6
-font-colors: #fff #ffd8a8
-
-FONT-SIZE:
-span: 3rem
-a: 2.2rem
-ion-icon: 4rem
 
 
-*/
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  /* color: #000; */
-  font-family: 'montserrat';
-}
-
-html {
-  font-size: 62.5%;
-  font-family: 'roboto', serif;
-}
-body {
-  /* overflow-x: hidden; */
-  /* background-color: #dee2e6; */
-  /* background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f); */
-  /* background: linear-gradient(135deg, #b33939, #992626);
-   */
-}
-
-.disabled {
-  display: none;
-}
-
-a,
-a:link,
-a:visited {
-  font-size: 1.5rem;
-  text-decoration: none;
-
-  color: #000;
-}
-
-p {
-  font-size: 1.5rem;
-}
-
-select {
-  font-size: 1.5rem;
-  padding: 0.5rem;
-}
-select option {
-  color: #000;
-}
-
-span {
-  font-size: 2rem;
-}
-
-strong {
-  font-size: 2rem;
-}
-
-ion-icon {
-  font-size: 3rem;
-}
-
-/* HEADER */
-
-nav {
-  width: 100%;
-  /* background-color: #ab8e66; */
-  background: linear-gradient(to bottom, #e9ecef 60%, #d4b28c 40%);
-  /* background-color: #adb5bd; */
-  color: #000;
-  padding: 0rem 2rem;
-}
-.upper-nav {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  align-items: center;
-  gap: 1rem;
-  padding: 0rem 0rem 2rem 0rem;
-
-  font-weight: 600 !important;
-}
-.logo {
-  margin-top: 1rem;
-}
-
-.upper-nav form {
-  position: relative;
-  display: flex;
-}
-.upper-nav form input[type='submit'] {
-  width: 6rem;
-  cursor: pointer;
-  background-color: transparent;
-  position: absolute;
-  right: 0;
-}
-
-.browse-holder {
-  position: relative;
-  margin-top: 1rem;
-}
-
-.magnifier {
-  position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
-  cursor: pointer;
-  color: #000;
-}
-
-.upper-nav form input {
-  width: 100%;
-  padding: 2rem;
-  font-size: 1.5rem;
-  border: none;
-  outline: none;
-  border-radius: 5px;
-  color: #000;
-  font-weight: 500;
-}
-.upper-nav form input::placeholder {
-  color: #000;
-}
-
-.log-in {
-  /* margin-top: 1rem; */
-  display: flex;
-  gap: 1rem;
-}
-.log-in a {
-  color: #000;
-  font-size: 1.5rem;
-
-  font-weight: 600 !important;
-  cursor: pointer;
-}
-.log-in div {
-  border-right: 1px solid white;
-}
-.nav-cart {
-  justify-self: end;
-  color: #000;
-
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-weight: 600 !important;
-  cursor: pointer;
-}
-select {
-  appearance: none;
-  -moz-appearance: none; /* Firefox */
-  -webkit-appearance: none; /* Safari and Chrome */
-  outline: none;
-  border: none;
-  background-color: transparent;
-  font-size: 2rem;
-  color: #000;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.bottom-nav {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  text-align: center;
-  align-items: center;
-  gap: 1rem;
-  font-weight: 600 !important;
-  padding: 1rem 0rem;
-}
-.bottom-nav a {
-  padding: 0.5rem 0rem;
-  color: #000;
-  font-size: 1.6rem;
-  transition: all 0.2s;
-  border-radius: 5px;
-}
-.bottom-nav a:hover {
-  background-color: white;
-  color: #000;
-}
-
-/* slider-menu */
-.slider-menu {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 25rem;
-
-  background: linear-gradient(to bottom, #91171f, #ffd8a8);
-  transform: translate(-27rem);
-
-  transition: all 0.5s;
-
-  z-index: 100;
-}
-.slider-menu a {
-  color: #000;
-  font-size: 1.7rem;
-  padding: 0rem 1rem;
-  font-weight: 600;
-  border-bottom: 1px solid #ffd8a8;
-}
-.slider-menu ion-icon {
-  color: #000;
-  font-size: 3.4rem;
-  cursor: pointer;
-}
-.open-menu {
-  display: none;
-}
-
-.slider-menu div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: transparent;
-  color: #000;
-
-  padding: 1rem 0.5rem;
-}
-.slider-menu div p {
-  font-size: 1.7rem;
-  margin-bottom: 0rem;
-  font-weight: 600;
-}
-.slider-menu div ion-icon {
-  color: #000;
-}
 
 /* MAIN */
 main {
@@ -268,13 +24,20 @@ main {
   object-fit: 100% 100%;
 } */
 /* test  */
-.img-div {
+.img-div, .img-div-second, .img-div-third {
   background-image: url('/images/perfumes/image-11.jpg');
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 40rem;
 }
+.img-div-second {
+  background-image: url('/images/perfumes/image-6.jpg');
+}
+.img-div-third {
+  background-image: url('/images/perfumes/image-9.jpg');
+}
+
 
 .carousel-cta {
   position: absolute;
