--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,88 +3,15 @@
   <head>
     {{> header}}
     <!-----------------CSS---------------------->
+     <link rel="stylesheet" href="stylesheets/general.css">
+     <link rel="stylesheet" href="stylesheets/nav.css">
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/query.css" />
 
     <title>{{ title }}</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="upper-nav">
-          <div class="logo">
-            <h1>Jadore</h1>
-            <p>Perfumes and Accessories</p>
-          </div>
-
-          <div class="browse-holder">
-            <form action="">
-              <label for="browse"></label>
-              <input type="text" name="browse" placeholder="Search" />
-              <label for="submit"></label>
-              <input
-                type="submit"
-                name="submit"
-                value=""
-                class="submit"
-                id="search-submit"
-              />
-            </form>
-            <ion-icon name="search-sharp" class="magnifier"></ion-icon>
-          </div>
-
-          <div class="log-in">
-            <a href="#">Sign in</a>
-            <div></div>
-            <a href="#">Register Account</a>
-          </div>
-
-          <div class="nav-cart">
-            <ion-icon
-              name="menu-outline"
-              class="open-menu"
-              onclick="oMenu()"
-            ></ion-icon>
-            <select name="language" id="">
-              <option value="UA">UA</option>
-              <option value="RU">RU</option>
-            </select>
-            <ion-icon name="cart-outline"></ion-icon>
-          </div>
-        </div>
-        <!-- bottom nav -->
-        <div class="bottom-nav">
-          <a href="#">full size vials</a>
-          <a href="#">3ml vials</a>
-          <a href="#">Catalogue</a>
-          <a href="#">About us</a>
-          <a href="#">Delivery</a>
-          <a href="#">Blog</a>
-          <a href="/contact">Contacts</a>
-        </div>
-      </nav>
-
-      <!-- slider-menu width < 800px  -->
-      <div class="slider-menu">
-        <div style="border-bottom: 1px solid white">
-          <div>
-            <p>Menu</p>
-          </div>
-          <ion-icon
-            name="close-outline"
-            class="close-menu"
-            onclick="cMenu()"
-          ></ion-icon>
-        </div>
-        <a href="#">full size vials</a>
-        <a href="#">3ml vials</a>
-        <a href="#">Catalogue</a>
-        <a href="#">About us</a>
-        <a href="#">Delivery</a>
-        <a href="#">Blog</a>
-        <a href="contact.html">Contacts</a>
-      </div>
-    </header>
+      {{> nav}}
     <main>
       <section class="section-one">
         <div
@@ -108,7 +35,7 @@
                 <a href="#">Choose</a>
               </div>
 
-              <div class="img-div"></div>
+              <div class="img-div-second"></div>
             </div>
 
             <div class="carousel-item">
@@ -117,7 +44,7 @@
                 <a href="#">Choose</a>
               </div>
 
-              <div class="img-div"></div>
+              <div class="img-div-third"></div>
             </div>
           </div>
           <button
@@ -371,6 +298,8 @@
     {{> footer}}
     <!-- my-script -->
     <script src="/scripts/script.js"></script>
+    <script src="/scripts/nav.js"></script>
+    <script src="/scripts/register.js"></script>
     <!-- b5 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
