implementing the registration functionality.

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -81,7 +81,7 @@
 <div class="register-curtain">
 <div class="register">
    <h2>Register</h2>
-  <form action="">
+  <form action="/user/register" method="post">
     <label for="name">Name</label>
     <input type="text" name="name" required>
     <label for="email">Email</label>
