--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -26,6 +26,7 @@
     {{!-- <link rel='stylesheet' href='stylesheets/contact.css' /> --}}
     <link rel="stylesheet" href="stylesheets/nav.css">
      <link rel="stylesheet" href="stylesheets/general.css">
+     <link rel="stylesheet" href="stylesheets/query.css">
   </head>
   <body>
      {{> nav}}
@@ -103,5 +104,7 @@
       integrity='sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct'
       crossorigin='anonymous'
     ></script>
+    <script src="/scripts/register.js"></script>
+    <script src="/scripts/nav.js"></script>
   </body>
 </html>
