--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -195,7 +195,7 @@ select {
 }
 
 
-.register {
+.sign-modal {
   width: 100%;
   max-width: 38rem;
   margin: 0 auto;
@@ -210,25 +210,31 @@ select {
   transform: translate(-50%, -50%);
   z-index: 101;
 
+  display: flex;
+  flex-direction: column;
 
 }
-.register h2 {
+#register {
+  display: none;
+}
+
+.sign-modal h2 {
   text-align: center;
   background-color: #d4b28c;
   padding: 1rem;
   font-weight: 600;
 }
 
-.register form {
+.sign-modal form {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   padding: 1rem 5rem;
 }
-.register form label {
+.sign-modal form label {
   font-size: 1.5rem;
 }
-.register form input {
+.sign-modal form input {
   padding: 1rem;
 
   outline: none;
@@ -236,7 +242,7 @@ select {
 
   font-size: 1.5rem;
 }
-.register form input[type="submit"] {
+.sign-modal form input[type="submit"] {
   width: 100%;
   max-width: 15rem;
   margin: 0 auto;
