--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -96,7 +96,7 @@
 {{!-- SIGN IN --}}
 <div class="sign-modal" id="log-in">
    <h2>Sign in</h2>
-  <form action="" method="post">
+  <form action="/user/login" method="post">
     <label for="email">Email</label>
     <input type="email" name="email" required>
     <label for="password">Password</label>
