--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,8 +3,8 @@
   <head>
     {{> header}}
     <!-----------------CSS---------------------->
-     <link rel="stylesheet" href="stylesheets/general.css">
-     <link rel="stylesheet" href="stylesheets/nav.css">
+     <link rel="stylesheet" href="/stylesheets/general.css">
+     <link rel="stylesheet" href="/stylesheets/nav.css">
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/query.css" />
 
@@ -13,6 +13,8 @@
   <body>
       {{> nav}}
     <main>
+      {{!-- log in - message --}}
+      <p class="log-in--message">{{logMessage }}</p>
       <section class="section-one">
         <div
           id="carouselExampleControlsFirst"
@@ -102,7 +104,7 @@
               <div class="card">
                 <div class="img-wrapper">
                   <img
-                    src="images/perfumes/image-1.jpg"
+                    src="/images/perfumes/image-1.jpg"
                     class="card-img-top"
                     alt="..."
                   />
@@ -121,7 +123,7 @@
               <div class="card">
                 <div class="img-wrapper">
                   <img
-                    src="images/perfumes/image-2.jpg"
+                    src="/images/perfumes/image-2.jpg"
                     class="card-img-top"
                     alt="..."
                   />
