log in message update + eslintrc.js update

--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -23,7 +23,7 @@ html {
   font-family: 'roboto', serif;
 }
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   /* background-color: #dee2e6; */
   /* background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f); */
   /* background: linear-gradient(135deg, #b33939, #992626);
@@ -68,18 +68,28 @@ ion-icon {
 }
 
 /* log-in--message */
+.log-in--container {
+
+
+ /* height: 30rem; */ 
+ /* border: 1px solid #000; */
+ 
+ color: white;
+background-color: rgba(212, 178, 140, 0.9);
+/* border: 2px dashed black; */
+
+width: 100%;
+
+ position: absolute;
+ top: 0;
+ left: 0;
+ right: 90%;
+ transition: all 1.5s;
+ z-index: 999;
+ text-align: center;
+}
+
 .log-in--message {
-  width: 100%;
-  max-width: 50rem;
-  /* border: 1px solid #000; */
-  font-size: 5rem;
-  color: white;
-  background-color: black;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: all 1s;
-  z-index: 999;
-  text-align: center;
+ font-size: 3rem;
+ margin: 0rem;
 }
