--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -53,6 +53,9 @@
       <a href='#'>Blog</a>
       <a href='/contact'>Contacts</a>
     </div>
+
+
+     
   </nav>
 
   <!-- slider-menu width < 800px  -->
@@ -96,6 +99,10 @@
 {{!-- SIGN IN --}}
 <div class="sign-modal" id="log-in">
    <h2>Sign in</h2>
+   <button class="google-sign"> 
+    <img src="/images/logos/google.png" alt="google icon" class="google-icon">
+     Sign in with Google
+     </button>
   <form action="/user/login" method="post">
     <label for="email">Email</label>
     <input type="email" name="email" required>
