--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -46,12 +46,14 @@
     <!-- bottom nav -->
     <div class='bottom-nav'>
       <a href='#'>full size vials</a>
-      <a href='#'>3ml vials</a>
-      <a href='#'>Catalogue</a>
-      <a href='#'>About us</a>
-      <a href='#'>Delivery</a>
-      <a href='#'>Blog</a>
-      <a href='/contact'>Contacts</a>
+    <a href='#'>Decanting</a>
+    <a href='#'>Makeup</a>
+    <a href='#'>Victoria's Secret</a>
+    <a href='#'>Catalogue</a>
+    <a href='#'>About us</a>
+     <a href='#'>Payment</a>
+      <a href='#'>News</a>
+    <a href='/contact'>Contacts</a>
     </div>
 
 
@@ -71,12 +73,14 @@
       ></ion-icon>
     </div>
     <a href='#'>full size vials</a>
-    <a href='#'>3ml vials</a>
+    <a href='#'>Decanting</a>
+    <a href='#'>Makeup</a>
+    <a href='#'>Victoria's Secret</a>
     <a href='#'>Catalogue</a>
     <a href='#'>About us</a>
-    <a href='#'>Delivery</a>
-    <a href='#'>Blog</a>
-    <a href='contact.html'>Contacts</a>
+     <a href='#'>Payment and Delivery</a>
+      <a href='#'>News and Promotions</a>
+    <a href='/contact'>Contacts</a>
   </div>
 </header>
 
