--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -1,98 +1,30 @@
-* {
-  font-family: "montserrat" !important;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
-
-body {
-  /* overflow-x: hidden; */
-  /* background-color: #dee2e6; */
-  background: linear-gradient(to bottom right, #91171f, #ffd8a8, #91171f);
-  overflow-y: hidden;
-  height: 100vw;
-}
-
 main {
   width: 100%;
   max-width: 130rem;
-
-  margin: 0 auto;
+  margin: 5rem auto;
 }
-
-h1 {
-  border-bottom: 2px solid white;
-  color: white;
+.h1-contacts {
+  text-align: center;
+  
 }
-
 .cta {
-  display: flex;
-  justify-content: space-around;
+  /* display: flex;
+  justify-content: space-evenly; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-/* cta info */
-.contact-info {
-  margin: auto 0;
-  color: white;
-}
-.contact-info div {
-  margin: 1rem 0rem;
-  font-size: 1.6rem;
-
+.form-container form div {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
-ion-icon {
-  font-size: 2.5rem;
+.form-container form div div input, .form-container form div div textarea {
+   padding: 1rem; 
+   padding-right: 5rem;
+  font-size: 2rem;
 }
-/* form */
-form div {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-form div input {
-  padding: 1rem 4rem 1rem 2rem;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  font-size: 1.8rem;
-  background-color: transparent;
-  color: white;
-}
-form div input::placeholder {
-  color: white;
-}
-form div input:hover {
-  border: 1px solid white;
-}
-textarea {
-  padding: 1rem 0rem 0rem 2rem;
-  resize: none;
-  margin-bottom: 1rem;
-  border-radius: 5px;
-  font-size: 1.8rem;
-  outline: none;
-  border: none;
-  color: white;
-  background-color: transparent;
-}
-textarea::placeholder {
-  color: white;
-}
-textarea:hover {
-  border: 1px solid white;
-}
-input[type="submit"] {
-  padding: 1.5rem 2rem;
-  font-size: 1.6rem;
-  text-transform: capitalize;
-  border: 1px solid white;
-  border-radius: 5px;
-  background-color: transparent;
-  color: white;
-  cursor: pointer;
+.form-container input[type="submit"] {
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  margin-top: 1rem;
 }
