--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
      <link rel="stylesheet" href="/stylesheets/general.css">
      <link rel="stylesheet" href="/stylesheets/nav.css">
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css">
     <link rel="stylesheet" href="/stylesheets/query.css" />
 
     <title>{{ title }}</title>
@@ -299,7 +300,7 @@
       </section>
     </main>
 
-    <footer>
+ 
     {{> footer}}
     <!-- my-script -->
     <script src="/scripts/script.js"></script>
