--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -50,6 +50,11 @@
           <ion-icon name='time-outline'></ion-icon>
           <p>Open Monday to Friday (08-18)h</p>
           </div>
+          <h2>Social Media:</h2>
+           <div>
+            <ion-icon name="logo-instagram"></ion-icon>
+             <p>Instagram</p>
+          </div>
         </div>
 
         <div class="form-container">
