--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -103,10 +103,10 @@
 {{!-- SIGN IN --}}
 <div class="sign-modal" id="log-in">
    <h2>Sign in</h2>
-   <button class="google-sign"> 
+   <a href="/google/redirect" class="google-sign"> 
     <img src="/images/logos/google.png" alt="google icon" class="google-icon">
      Sign in with Google
-     </button>
+     </a>
   <form action="/user/login" method="post">
     <label for="email">Email</label>
     <input type="email" name="email" required>
