--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -25,9 +25,11 @@
       </div>
 
       <div class='log-in'>
+        <button class="sign-out default-none">Sign Out</button>
        <button class="sign-in">Sign in</button>
         <div></div>
         <button class="sign-up">Register Account</button>
+         <button class="profile-el default-none">Profile</button>
       </div>
 
       <div class='nav-cart'>
