users can now forget their passwords, and reset them at any time.

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -121,7 +121,7 @@
 {{!-- RESET PASSWORD --}}
 <div class="sign-modal" id="reset-password">
    <h2>Reset password</h2> 
-  <form action="/user/" method="post">
+  <form action="/user/sendActivationMail" method="post">
     <label for="email">Email</label>
     <input type="email" name="email" required>
     <input type="submit" value="Send request">
