--- a/views/resetPass.hbs
+++ b/views/resetPass.hbs
@@ -6,9 +6,9 @@
   <title>Reset Password</title>
 </head>
 <body>
-  <form action="" method="post">
+  <form action="/user/changeMyPassword/{{id}}" method="post">
     <label for="new-pass">New Password</label>
-    <input type="password" name="new-pass" class="new-pass" id="new-pass">
+    <input type="password" name="password" class="new-pass" id="new-pass">
     <label for="repeat-pass">Repeat new password</label>
     <input type="password" name="repeat-pass" class="repeat-new--pass" id="repeat-new--pass">
     <input type="submit" value="submit new password" class="sub-new--pass" id="sub-new--pass">
