the user can now log out.

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -25,7 +25,9 @@
       </div>
 
       <div class='log-in'>
-        <button class="sign-out default-none">Sign Out</button>
+        <form action="/user/logout" method="post">
+        <button class="sign-out default-none" type="submit">Sign Out</button>
+        </form>
        <button class="sign-in">Sign in</button>
         <div></div>
         <button class="sign-up">Register Account</button>
