--- a/views/resetPass.hbs
+++ b/views/resetPass.hbs
@@ -1,17 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reset Password</title>
-</head>
-<body>
-  <form action="/user/changeMyPassword/{{id}}" method="post">
-    <label for="new-pass">New Password</label>
-    <input type="password" name="password" class="new-pass" id="new-pass">
-    <label for="repeat-pass">Repeat new password</label>
-    <input type="password" name="repeat-pass" class="repeat-new--pass" id="repeat-new--pass">
-    <input type="submit" value="submit new password" class="sub-new--pass" id="sub-new--pass">
-  </form>
-</body>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>Reset Password</title>
+    <link rel='preconnect' href='https://fonts.googleapis.com' />
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+    <link
+      href='https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap'
+      rel='stylesheet'
+    />
+    <link rel='stylesheet' href='/stylesheets/general.css' />
+    <link rel='stylesheet' href='/stylesheets/resetPass.css' />
+  </head>
+  <body>
+
+    <form action='/user/changeMyPassword/{{id}}' method='post'>
+      <h1>Jadore</h1>
+      <label for='new-pass'>New Password</label>
+      <input type='password' name='password' class='new-pass' id='new-pass' />
+      <label for='repeat-pass'>Repeat new password</label>
+      <input
+        type='password'
+        name='repeat-pass'
+        class='repeat-new--pass'
+        id='repeat-new--pass'
+      />
+      <input
+        type='submit'
+        value='submit'
+        class='sub-new--pass'
+        id='sub-new--pass'
+      />
+    </form>
+  </body>
 </html>
