users can now send mail to us for support and contact.

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-container">
-          <form action='' method="">
+          <form action='/email/sendmail' method="post">
             <div>
               <div>
                 <label for='name'></label>
@@ -83,7 +83,7 @@
               <div>
                 <label for='message'></label>
                 <textarea
-                  name='message'
+                  name='query'
                   id=''
                   rows='10'
                   placeholder='Your inquiry'
