--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,34 +1,13 @@
 <html lang='en'>
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <meta
-      name='description'
-      content='Contact us for any inquiries or feedback about our exquisite collection of perfumes. Our team will be glad to assist you with any questions you may have.'
-    />
-    <meta
-      name='keywords'
-      content='perfume, fragrance, contact, inquiry, feedback, customer support, assistance'
-    />
-    <link rel='preconnect' href='https://fonts.googleapis.com' />
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <link
-      href='https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap'
-      rel='stylesheet'
-    />
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css'
-      integrity='sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N'
-      crossorigin='anonymous'
-    />
-    {{! <title>Contacts</title> }}
-    {{!-- <link rel='stylesheet' href='stylesheets/contact.css' /> --}}
+      {{> header}}
+ 
     <link rel="stylesheet" href="stylesheets/nav.css">
      <link rel="stylesheet" href="stylesheets/general.css">
      <link rel="stylesheet" href="stylesheets/contact.css">
        <link rel="stylesheet" href="/stylesheets/footer.css">
      <link rel="stylesheet" href="stylesheets/query.css">
+       <title>{{ title }}</title>
   </head>
   <body>
      {{> nav}}
@@ -51,10 +30,14 @@
           <p>Open Monday to Friday (08-18)h</p>
           </div>
           <h2>Social Media:</h2>
-           <div>
+          <div class="social-media--links">
+            <a href="https://www.instagram.com/jadore_kremenchug/" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
-             <p>Instagram</p>
-          </div>
+             <p>
+              Instagram
+             </p>
+             </a>
+         </div>
         </div>
 
         <div class="form-container">
